--- a/domain.yml
+++ b/domain.yml
@@ -7,23 +7,29 @@ session_config:
 intents:
   - greet
   - opciones
-  - goodbye
-  - affirm
-  - deny
-  - mi_nombre
-  - clasificar_imagen
   - clasificar_sonido
   - corto
   - mediano
   - largo
-  - bot_opciones
   - pregunta_dos
+  - pregunta_dos_exp
   - pregunta_tres
+  - pregunta_tres_exp
   - post_api
   - otro_sonido
   - no_seguir
   - termina_clasif
   - pregunta_uno
+  - explicacion2
+  - explicacion3
+  - exp2_1
+  - exp2_2
+  - exp2_3
+  - exp2_4
+  - exp3_1
+  - exp3_2
+  - exp3_3
+  - exp3_4
 entities:
   - nombre
   - respuesta1
@@ -54,6 +60,9 @@ responses:
     - title: "Estoy preparado para clasificar"
       payload: /pregunta_uno
 
+  utter_dar_ultimo_eco:
+  - text: "{eco}"
+
   utter_pregunta_uno:
   - text: "Este eco fue capturado en la estación de {estacion} en {fecha} ¿Cómo es el sonido? ¿Es corto, mediano o largo?"
     buttons:
@@ -65,6 +74,7 @@ responses:
       payload: /pregunta_dos{{"respuesta1":"Largo"}}
     - title: "Repetir sonido / Pausar"
 
+
   utter_pregunta_dos:
   - text: "Se escucha al principio un sonido corto y luego un silencio o un sonido menos intenso?"
     buttons:
@@ -72,6 +82,8 @@ responses:
       payload: /pregunta_tres{{"respuesta2":"Si"}}
     - title: "No"
       payload: /pregunta_tres{{"respuesta2":"No"}}
+    - title: "Ayuda"
+      payload: /explicacion2
     - title: "Repetir sonido / Pausar"
     
   utter_pregunta_tres:
@@ -81,6 +93,8 @@ responses:
       payload: /post_api{{"respuesta3":"Si"}}
     - title: No
       payload: /post_api{{"respuesta3":"No"}}
+    - title: "Ayuda"
+      payload: /explicacion3
     - title: "Repetir sonido / Pausar"
 
   utter_termina_clasif:
@@ -93,6 +107,108 @@ responses:
 
   utter_despedir:
   - text: "¡Hasta pronto!"
+
+  utter_exp2:
+  - text: "A continuación te proporcionamos algunos ejemplos de clasificación para que puedas responder mejor a esta pregunta:"
+    buttons:
+    - title: Continuar
+      payload: /exp2_1
+
+  utter_sonido_2_1:
+  - text: https://panoptes-uploads.zooniverse.org/project_attached_image/4fe959f6-467f-4e9e-bfe5-10229293e261.wav
+
+  utter_sonido_2_2:
+  - text: https://panoptes-uploads.zooniverse.org/project_attached_image/f06e6683-3ea1-4940-90f1-d9cdb579472c.wav
+
+  utter_sonido_2_3:
+  - text: https://panoptes-uploads.zooniverse.org/project_attached_image/597e5bec-3861-40dd-b8cd-5bf5b2d0dfa5.wav
+
+  utter_sonido_2_4:
+  - text: https://panoptes-uploads.zooniverse.org/project_attached_image/dbf031c7-4b5e-4da0-894c-7c5b14987934.wav
+
+  utter_exp2_1:
+  - text: "Este sonido tiene al principio un sonido corto seguido de un sonido menos intenso"
+    buttons:
+    - title: Siguiente ejemplo
+      payload: /exp2_2
+    - title: "Repetir sonido / Pausar"
+    - title: Volver a la pregunta
+      payload: /pregunta_dos_exp
+
+  utter_exp2_2:
+  - text: "Este sonido tiene al principio un sonido corto seguido de un sonido menos intenso"
+    buttons:
+    - title: Siguiente ejemplo
+      payload: /exp2_3
+    - title: "Repetir sonido / Pausar"
+    - title: Volver a la pregunta
+      payload: /pregunta_dos_exp
+
+  utter_exp2_3:
+  - text: "Este sonido tiene al principio un sonido corto seguido de un sonido menos intenso, pero al ser un eco corto, el sonido inicial es relativamente largo"
+    buttons:
+    - title: Siguiente ejemplo
+      payload: /exp2_4
+    - title: "Repetir sonido / Pausar"
+    - title: Volver a la pregunta
+      payload: /pregunta_dos_exp
+
+  utter_exp2_4:
+  - text: "Este sonido tiene al principio un sonido corto seguido de un sonido menos intenso, pero el sonido es poco marcado y el nivel de todo el sonido es relativamente alto"
+    buttons:
+    - title: Volver a la pregunta
+      payload: /pregunta_dos_exp
+
+  utter_exp3:
+  - text: "A continuación te proporcionamos algunos ejemplos de clasificación para que puedas responder mejor a esta pregunta:"
+    buttons:
+    - title: Continuar
+      payload: /exp3_1
+
+  utter_sonido_3_1:
+  - text: https://panoptes-uploads.zooniverse.org/project_attached_image/4fe959f6-467f-4e9e-bfe5-10229293e261.wav
+
+  utter_sonido_3_2:
+  - text: https://panoptes-uploads.zooniverse.org/project_attached_image/597e5bec-3861-40dd-b8cd-5bf5b2d0dfa5.wav
+
+  utter_sonido_3_3:
+  - text: https://panoptes-uploads.zooniverse.org/project_attached_image/f06e6683-3ea1-4940-90f1-d9cdb579472c.wav
+
+  utter_sonido_3_4:
+  - text: https://panoptes-uploads.zooniverse.org/project_attached_image/dbf031c7-4b5e-4da0-894c-7c5b14987934.wav
+
+  utter_exp3_1:
+  - text: "El tono inicial de este sonido es diferente al resto porque este eco tiene mucho desplazamiento Doppler"
+    buttons:
+    - title: Siguiente ejemplo
+      payload: /exp3_2
+    - title: "Repetir sonido / Pausar"
+    - title: Volver a la pregunta
+      payload: /pregunta_tres_exp
+
+  utter_exp3_2:
+  - text: "El tono inicial de este sonido es diferente al resto porque este eco tiene mucho desplazamiento Doppler"
+    buttons:
+    - title: Siguiente ejemplo
+      payload: /exp3_3
+    - title: "Repetir sonido / Pausar"
+    - title: Volver a la pregunta
+      payload: /pregunta_tres_exp
+
+  utter_exp3_3:
+  - text: "El tono inicial de este sonido es diferente al resto, pero al tener menos efecto Doppler, por lo que es más difícil de distinguir"
+    buttons:
+    - title: Siguiente ejemplo
+      payload: /exp3_4
+    - title: "Repetir sonido / Pausar"
+    - title: Volver a la pregunta
+      payload: /pregunta_tres_exp
+
+  utter_exp3_4:
+  - text: "El tono inicial de este sonido es diferente al resto, pero al tener menos efecto Doppler, por lo que es más difícil de distinguir"
+    buttons:
+    - title: Volver a la pregunta
+      payload: /pregunta_tres_exp
 
 
 slots:
@@ -113,7 +229,7 @@ slots:
     
   eco:
     type: text
-
+  
   estacion:
     type: text
   
@@ -129,3 +245,4 @@ actions:
   - action_set_duracion
   - action_set_r2
   - action_set_r3
+  
